# sktime-weather-forecast

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: main.yml
tests/: test_scraper.py  test_weatherapi.py  test_weatherforcaster.py
weatherapi/: extract_transform.py  scraper.py  views.py  weather_forecaster.py
weatherapi/templates/: index.html
