[tool.poetry]
name = "WeatherAPI"
version = "0.1.0"
description = ""
authors = ["Matthew Wisdom <matthewwisdom11@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
Flask = "^2.2.2"
Flask-Limiter = "^2.7.0"
Flask-Caching = "^2.0.1"
requests = "^2.28.1"
xgboost = "^1.7.1"
gunicorn = "^20.1.0"
sktime = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
